--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,13 @@ header{
 }
 
 .info{
-    margin: 10px;
+    margin: 12px;
     font-size: 23px;
 }
 
 .pink{
-    color: #e4007f;
+    color: #fa0f80
+    /* color: #e4007f; */
 }
 
 .green{
@@ -54,7 +55,7 @@ header{
 }
 
 .blue{
-    color: #4760ab;
+    color: #0668e9;
 }
 
 .orange{
@@ -91,6 +92,64 @@ footer{
     font-size: 16px;
     text-align: center;
 }
+
+
+
+/* history page */
+.minori{
+    background-color: #FFCDAC;
+}
+
+.haruka{
+    background-color: #99CDFF;
+}
+
+.airi{
+    background-color: #FFA9CC;
+}
+
+.shizuku{
+    background-color: #9AEEDE;
+}
+
+.char-img {
+    flex-grow: inherit;
+    flex-basis: 37%;
+    margin-top: 40px;
+  }
+
+  .profile{
+    flex-basis: 55%;
+    padding: 2%
+  }
+
+  .container {
+    display: flex;
+    flex-flow: wrap;
+    width: 100%;
+    height: auto;
+  }
+  
+@media (max-width: 576px) {
+  .char-img {
+    padding: 5%;
+    flex-basis: 100%;
+  }
+
+  .profile{
+    flex-basis: 100%;
+  }
+
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: auto;
+}
+
 
 
 /* music page */
